[project]
name = "sar_coloc"
requires-python = ">= 3.9"
license = {text = "MIT"}
dependencies = [
    "geopandas",
    "numpy",
    "xarray",
    "shapely",
    "fsspec",
    "rasterio",
    "affine",
    "pandas",
    "dask",
    "xsar",
    "more-itertools"
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sar_coloc"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "sar_coloc"
